# ptcgp-mcp-server

./: README.md  cards_2025-03-26.csv  main.py  ptcgp-server.py  pyproject.toml
