[project]
name = "ptcgp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
]
